# sd.cpp-webui

./: .gitignore  README.md  config.json  config.py  pyproject.toml  pytest.ini  requirements.txt  sdcpp_webui.py  sdcpp_webui.sh  sdcpp_webui_linux.sh  sdcpp_webui_windows.bat  sdcpp_webui_windows.ps1
defaults/: default_presets.json
docs/: linux.md  windows.md
modules/: any2video_ui.py  config.py  convert_ui.py  gallery.py  gallery_ui.py  get_opt.py  img2img_ui.py  imgedit_ui.py  loader.py  options_ui.py  sdcpp.py  shared_instance.py  txt2img_ui.py  ui.py  ui_any2video.py  ui_convert.py  ui_gallery.py  ui_img2img.py  ui_imgedit.py  ui_options.py  ui_txt2img.py  ui_upscale.py  upscale_ui.py  utility.py
modules/ui/: advanced_settings.py  cache.py  chroma.py  circular.py  constants.py  controlnet.py  easycache.py  environment.py  eta.py  experimental.py  extra.py  folder_settings.py  generation_settings.py  high_noise_generation_settings.py  loras.py  models.py  performance.py  photomaker.py  presets.py  preview.py  prompts.py  qwen.py  ref_img.py  slg.py  taesd.py  timestep_shift.py  upscale.py  vae_tiling.py
modules/utils/: encryption.py  file_utils.py  image_display.py  image_utils.py  log_parser.py  math_utils.py  metadata_utils.py  preset_manager.py  prompt_manager.py  queue.py  sd_interface.py  sdcpp_utils.py  subprocess_manager.py  ui_events.py  ui_handler.py  ui_state.py  utility.py  video_utils.py
test/: conftest.py  test_gallery.py
test/utils/: master-362-742a733.txt  master-367-b88cc32.txt  test_sd_interface.py  test_utility.py
(+18 files in other folders)
