[project]
name = "sd-cpp-webui"
version = "0.1.0"
description = "A simple webui for stable-diffusion.cpp"
license = "AGPL-3.0-only"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio==5.44.1"
]

[project.urls]
Repository = "https://github.com/daniandtheweb/sd.cpp-webui"

[tool.setuptools.packages.find]
include = ["modules*"]
namespaces = false

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore the specific deprecation warning from the websockets library
    "ignore:.*websockets.legacy is deprecated.*:DeprecationWarning",
]
